<?xml version="1.0"?>
<package format="2">
  <name>vrviz_ros</name>
  <version>0.1.0</version>
  <description>The VRViz package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="jheselden+vrviz@lincoln.ac.uk">James Heselden</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="repository">http://www.github.com/Iranaphor/VRViz_ROS</url>


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <author email="jheselden+vrviz@lincoln.ac.uk">James Heselden</author>
  <author email="jstevenson+vrviz@lincoln.ac.uk">Jack Stevenson</author>


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->

  <!-- Use depend as a shortcut for packages that are both build, export and execute dependencies -->
  <!-- More info can be found: http://wiki.ros.org/catkin/package.xml#Dependencies -->
  <depend>actionlib</depend>
  <depend>message_runtime</depend>
  <depend>move_base</depend>
  <depend>mqtt_bridge</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>topic_tools</depend>
  <depend>uol_turtlebot_simulator</depend>

  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- Use doc_depend for packages you need only for building documentation: -->
  <!--   <doc_depend>doxygen</doc_depend> -->

</package>