<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vrviz</name>
  <version>0.0.1</version>
  <description>The vrviz ros package</description>

  <maintainer email="primordia@live.com">james</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>mosquitto</depend>
  <depend>python3-paho-mqtt</depend>
  <depend>python3-msgpack</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>





